--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <header>
         <div class="naber">
             <img src="Group 40071 (2).png" alt="" width="50px" height="50px">
-           Travelling <span>point</span>
+           tarek <span>point</span>
         </div>
         &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;  
 
